--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,11 +8,12 @@
 </head>
 <body>
     <!-- Animated Background -->
-    <div class="animated-bg">
-        <div class="car-animation car1"></div>
-        <div class="car-animation car2"></div>
-        <div class="car-animation car3"></div>
-    </div>
+<div class="animated-bg">
+    <div class="car-animation car1">🚗</div>
+    <div class="car-animation car2">🚕</div>
+    <div class="car-animation car3">🚙</div>
+</div>
+    
 
     <!-- SCREEN 1: Welcome -->
     <div id="screen-welcome" class="screen active">
