--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,11 +7,32 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <!-- Animated Background -->
+   <!-- Animated Background -->
 <div class="animated-bg">
-    <div class="car-animation car1">🚗</div>
-    <div class="car-animation car2">🚕</div>
-    <div class="car-animation car3">🚙</div>
+    <div class="car-animation car1">
+        <svg viewBox="0 0 100 40" class="car-svg">
+            <rect x="10" y="15" width="80" height="15" rx="5" fill="currentColor" opacity="0.6"/>
+            <circle cx="30" cy="32" r="5" fill="currentColor" opacity="0.8"/>
+            <circle cx="70" cy="32" r="5" fill="currentColor" opacity="0.8"/>
+            <path d="M 20,15 L 30,5 L 50,5 L 60,15 Z" fill="currentColor" opacity="0.4"/>
+        </svg>
+    </div>
+    <div class="car-animation car2">
+        <svg viewBox="0 0 100 40" class="car-svg">
+            <rect x="10" y="15" width="80" height="15" rx="5" fill="currentColor" opacity="0.6"/>
+            <circle cx="30" cy="32" r="5" fill="currentColor" opacity="0.8"/>
+            <circle cx="70" cy="32" r="5" fill="currentColor" opacity="0.8"/>
+            <path d="M 20,15 L 30,5 L 50,5 L 60,15 Z" fill="currentColor" opacity="0.4"/>
+        </svg>
+    </div>
+    <div class="car-animation car3">
+        <svg viewBox="0 0 100 40" class="car-svg">
+            <rect x="10" y="15" width="80" height="15" rx="5" fill="currentColor" opacity="0.6"/>
+            <circle cx="30" cy="32" r="5" fill="currentColor" opacity="0.8"/>
+            <circle cx="70" cy="32" r="5" fill="currentColor" opacity="0.8"/>
+            <path d="M 20,15 L 30,5 L 50,5 L 60,15 Z" fill="currentColor" opacity="0.4"/>
+        </svg>
+    </div>
 </div>
     
 
