Added Floating license plate

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -97,9 +97,18 @@
             <h2 class="screen-title">Enter Vehicle Details</h2>
             
             <div class="floating-cards">
-                <div class="id-card"></div>
-                <div class="id-card"></div>
-                <div class="id-card"></div>
+                <div class="id-card">
+    <div class="plate">LHE</div>
+    <div class="plate-number">1234</div>
+</div>
+<div class="id-card">
+    <div class="plate">ISB</div>
+    <div class="plate-number">5678</div>
+</div>
+<div class="id-card">
+    <div class="plate">KHI</div>
+    <div class="plate-number">9012</div>
+</div>
             </div>
             
             <div class="form-container">
