Confetti animation in index

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -208,6 +208,29 @@
 
     <!-- SCREEN 7: Parking Confirmed -->
     <div id="screen-confirmation" class="screen">
+        <!-- Confetti Animation -->
+    <div class="confetti-container">
+        <div class="confetti"></div>
+        <div class="confetti"></div>
+        <div class="confetti"></div>
+        <div class="confetti"></div>
+        <div class="confetti"></div>
+        <div class="confetti"></div>
+        <div class="confetti"></div>
+        <div class="confetti"></div>
+        <div class="confetti"></div>
+        <div class="confetti"></div>
+        <div class="confetti"></div>
+        <div class="confetti"></div>
+        <div class="confetti"></div>
+        <div class="confetti"></div>
+        <div class="confetti"></div>
+        <div class="confetti"></div>
+        <div class="confetti"></div>
+        <div class="confetti"></div>
+        <div class="confetti"></div>
+        <div class="confetti"></div>
+    </div>
         <div class="confirmation-container">
             <div class="success-icon">
                 <div class="checkmark-circle">
